--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -25,4 +25,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    /*Dagger2*/
+    implementation 'com.google.dagger:dagger:2.20'
+
+    /*Retrofit*/
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
+    /*Timber*/
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
