--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -15,23 +15,40 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    def room_version = "2.1.0-alpha03"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     /*Dagger2*/
     implementation 'com.google.dagger:dagger:2.20'
-
     /*Retrofit*/
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-
     /*Timber*/
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    /*Room*/
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // use kapt for Kotlin
+    // optional - Coroutines support for Room
+    implementation "androidx.room:room-coroutines:$room_version"
+    /*Preference screen*/
+    implementation 'com.android.support:preference-v7:28.4.0'
 }
