--- a/Weatherizer/app/src/main/AndroidManifest.xml
+++ b/Weatherizer/app/src/main/AndroidManifest.xml
@@ -8,14 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".application.WeatherizerApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".CountrySearchActivity">
+        <activity android:name=".ui.activity.WeatherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:value="@xml/searchable"/>
         </activity>
+        <activity android:name=".ui.activity.WeatherDetailActivity" />
+        <activity android:name=".ui.activity.SettingsActivity"></activity>
     </application>
 
 </manifest>
