--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -37,15 +37,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     /*Dagger2*/
     implementation 'com.google.dagger:dagger:2.20'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
+
     /*Retrofit*/
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
+    // JSON Converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
     /*Timber*/
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
     /*Room*/
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
     // use kapt for Kotlin
     // optional - Coroutines support for Room
     implementation "androidx.room:room-coroutines:$room_version"
