--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    dataBinding {
+        enabled = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -20,7 +25,8 @@ android {
             debuggable true
         }
 
-        buildTypes.each { it.buildConfigField 'String', 'MY_API_KEY', API_KEY } }
+        buildTypes.each { it.buildConfigField 'String', 'MY_API_KEY', API_KEY }
+    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,7 +53,8 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
 
     // optional - ReactiveStreams support for LiveData
-    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // use -ktx for Kotlin
+    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+    // use -ktx for Kotlin
 
     // optional - Test helpers for LiveData
     testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
@@ -73,4 +80,8 @@ dependencies {
     implementation "androidx.room:room-coroutines:$room_version"
     /*Preference screen*/
     implementation 'com.android.support:preference-v7:28.4.0'
+
+    /*Google maps*/
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+
 }
