--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -26,6 +26,9 @@ android {
         }
 
         buildTypes.each { it.buildConfigField 'String', 'MY_API_KEY', API_KEY }
+        buildTypes.each {
+            it.buildConfigField 'String', 'GOOGLE_MAPS_API_KEY ', GOOGLE_MAPS_API_KEY
+        }
     }
 
     compileOptions {
@@ -82,6 +85,7 @@ dependencies {
     implementation 'com.android.support:preference-v7:28.4.0'
 
     /*Google maps*/
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
 
 }
