Aded Implementation for the BaseViewModel

--- a/Weatherizer/app/src/main/AndroidManifest.xml
+++ b/Weatherizer/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="co.alexdev.weatherizer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
@@ -15,7 +16,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="XXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+            android:value="AIzaSyDbO6PX73siPCTZR1HV0S2mMvE4RxKtiR4" />
 
         <activity android:name=".ui.activity.WeatherActivity">
             <intent-filter>
