--- a/Weatherizer/app/build.gradle
+++ b/Weatherizer/app/build.gradle
@@ -55,6 +55,9 @@ android {
         implementation 'com.google.dagger:dagger:2.20'
         annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
 
+        // ViewModel and LiveData
+        implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+
         // optional - ReactiveStreams support for LiveData
         implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
 
